re orgainze folder

--- a/07-position.html
+++ b/07-position.html
@@ -14,7 +14,7 @@
         height: 540px;
         margin: auto;
     ">
-        <img src="images/grandblue-fantasy.jpg" alt="grandblue-fantasy" style="
+        <img src="assets/images/grandblue-fantasy.jpg" alt="grandblue-fantasy" style="
             opacity: 0.5;
             height: 100%;
             position: absolute;
@@ -29,7 +29,7 @@
             Left
             <span style="float: right;">Right</span>
         </h2>
-        <img src="images/ffi-icon.png" alt="grandblue-fantasy" style="
+        <img src="assts/images/ffi-icon.png" alt="grandblue-fantasy" style="
             position: absolute;
             width: 50px;
             bottom: 0;
