--- a/19-transition.html
+++ b/19-transition.html
@@ -41,7 +41,7 @@
     </style>
 </head>
 <body>
-    <img class="myImg" src="images/aerith-avartar.jpg" alt="avatar">
-    <img  class="newImg" src="images/aerith-avartar.jpg" alt="avatar">
+    <img class="myImg" src="assets/images/aerith-avartar.jpg" alt="avatar">
+    <img  class="newImg" src="assets/images/aerith-avartar.jpg" alt="avatar">
 </body>
 </html>
