--- a/20-animation.html
+++ b/20-animation.html
@@ -43,8 +43,8 @@
     </style>
 </head>
 <body>
-    <img class="myImg" src="images/aerith-avartar.jpg" alt="avatar">
-    <img class="rotate" src="images/aerith-avartar.jpg" alt="avatar">
+    <img class="myImg" src="assets/images/aerith-avartar.jpg" alt="avatar">
+    <img class="rotate" src="assets/images/aerith-avartar.jpg" alt="avatar">
     <!-- <div class="disc rotate"></div> -->
 </body>
 </html>
