--- a/22-responsive.html
+++ b/22-responsive.html
@@ -11,8 +11,8 @@
             font-size: 2rem;
         }
         img {
-            width: 80vw;
-            max-width: 600px; /* use max or min to control box responsive size */
+            width: 80%;
+            max-width: 480px; /* use max or min to control box responsive size */
         }
         .center { text-align: center; }
         .box {
@@ -39,13 +39,13 @@
     <h1 class="center">Responsive Website</h1>
     <div class="center">
         <div class="box">
-            <img src="images/ffxii-airship.webp" alt="ffxii-airship">
+            <img src="assets/images/ffxii-airship.webp" alt="ffxii-airship">
         </div>
         <div class="box">
-            <img src="images/ffxii-airship.webp" alt="ffxii-airship">
+            <img src="assets/images/ffxii-airship.webp" alt="ffxii-airship">
         </div>
         <div class="box">
-            <img src="images/ffxii-airship.webp" alt="ffxii-airship">
+            <img src="assets/images/ffxii-airship.webp" alt="ffxii-airship">
         </div>
     </div>
 </body>
